--- a/zap-server/package.json
+++ b/zap-server/package.json
@@ -1,16 +1,20 @@
 {
-  "name": "zap-bot",
+  "name": "zap-server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./Client/client"
+    "start": "nodemon server"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "venom-bot": "^4.0.5"
+    "body-parser": "1.19.0",
+    "config": "3.2.3",
+    "express": "4.17.1",
+    "global": "^4.4.0",
+    "nodemon": "1.19.4"
   }
 }
